--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "homepage": "https://szymanskaolejniczak.github.io/goit-react-hw-01-components/",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/style": "^0.8.0",
+    "@emotion/styled": "^11.10.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "prop-types": "^15.8.1",
+    "proptype": "^1.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
